# FedUL

./: .gitignore  LICENSE  README.md  downloadMNIST.py  main.py  pyproject.toml  run_sim.py  test_data.py
fedUL_app/: client_app.py  server_app.py  task.py
fedULapp/: client_app.py  server_app.py  task.py
nets/: models.py
utils/: data_utils.py
